# fortran-error-handler

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  Makefile.example  README.md  codemeta.json  fortran-error-handler.vfproj  fpm.toml  main  meson.build  paper.bib  paper.md
doc/: ErrorCriteria.md  ErrorHandler.md  ErrorInstance.md  Result.md
example/: CustomErrorCriteria.f08  CustomErrorCriteria.f90  example_usage.f90  trace.f08
src/: ErrorCriteria.f08  ErrorCriteria.f90  ErrorHandler.f08  ErrorHandler.f90  ErrorInstance.f08  ErrorInstance.f90  Result.f08  Result.f90  TestClass.f08  example_usage.f08
tests/: assert.f90  run_tests.f90  tests_ErrorCriteria.f90  tests_ErrorInstance.f90  tests_Result.f90  util.f90
